Fix signature of q_atomic_test_and_set_ptr.

The lack of const results in a compile error when compiling 32-bit Qt
in a 64-bit machine (-platform linux-g++-32 -xplatform linux-g++-32).
Adding const is safe since expected and newval parameters are not modified
by qatomic_i386.s.

Task-Number: QTBUG-22479
Change-Id: Iee9f73b9bed777177aeae34bfcedb2feac83e67a
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>